--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Lucie's Website</title>
+		<title>Lucie's Website Deploy Astro</title>
 	</head>
 	<body>
-		<h1>Lucie's Website</h1>
+		<h1>Lucie's Website Deploy Astro</h1>
 	</body>
 </html>
